removes additional border on small views. adds colored border to .basket-final in all views. SHOP-1621 #resolve

--- a/templates/Evo/themes/base/less/base.less
+++ b/templates/Evo/themes/base/less/base.less
@@ -1828,10 +1828,6 @@ fieldset {
         border: none;
     }
 
-    .basket-final {
-        border: 1px solid @brand-primary !important;
-    }
-
     .order-items, .order-items a.btn {
         font-size: 85%;
     }
@@ -1846,6 +1842,13 @@ fieldset {
 .navbar-form.navbar-left.filter-select {
     margin-left: 5px;
     margin-right: 10px;
+}
+
+.basket-final {
+    border: none;
+    .panel{
+        border-color: @brand-primary !important;
+    }
 }
 
 /* product variations */
